<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/info_menu_news"
        android:icon="@drawable/icon_stop"
        android:title="@string/ui_news" />
    <item
        android:id="@+id/info_menu_infos"
        android:icon="@drawable/icon_stop"
        android:title="Info" />
</menu>