...
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/info_bottomnavigationview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/newsinfo_linearlayout" />

        <LinearLayout
            android:id="@+id/newsinfo_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
...
                    android:layout_weight="2"
                    android:text="museum@system.pl" />
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/newsinfo_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/info_bottomnavigationview"
            app:layout_constraintEnd_toEndOf="parent"
...
